--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -23,7 +23,9 @@
       "Secret": "your api key",
       "Issuer": "forum-api",
       "Audience": "forum-api"
-    }
+    },
+    "PageSize": 20,
+    "CommentPageSize": 30
   },
   "EmailOptions": {
     "MailServer": "smtp.office365.com",
